bootstrap style to employee cards

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <div class="d-flex justify-content-center flex-wrap">
         <div class="card" style="width: 18rem;">
             <div class="card-body">
-                <h5 class="card-title">Jared </h5>
-                <h6 class="card-subtitle mb-2">Manager</h6>
+                <section class="bg-primary text-white">
+                    <h5 class="card-title">Jared </h5>
+                    <h6 class="card-subtitle mb-2">Manager</h6>
+                </section>
                 <ul>
                     <li>ID: 1</li>
                     <li>Email: <a href="mailto: jaredm@fakemail.com">jaredm@fakemail.com</a></li>
@@ -27,19 +29,23 @@
             </div>
             <div class="card" style="width: 18rem; margin: auto; margin-top: 1%;" id="cards">
                 <div class="card-body">
-                    <h5 class="card-title">Alex</h5>
-                    <h6 class="card-subtitle mb-2">Engineer</h6>
+                    <section class="bg-primary text-white">
+                        <h5 class="card-title">Alex</h5>
+                        <h6 class="card-subtitle mb-2">Engineer</h6>
+                    </section>
                     <ul>
                         <li>ID: 2</li>
                         <li>Email: <a href="mailto: Alex@fake.com">Alex@fake.com</a></li>
-                        <li><a href='https://github.com/bob'>GitHub: bob</a></li>
+                        <li><a href='https://github.com/null/'>GitHub:</a></li>
                     </ul>
                 </div>
             </div>
             <div class="card" style="width: 18rem; margin: auto; margin-top: 1%;" id="cards">
                 <div class="card-body">
-                    <h5 class="card-title">John</h5>
-                    <h6 class="card-subtitle mb-2 ">Intern</h6>
+                    <section class="bg-primary text-white">
+                        <h5 class="card-title">John</h5>
+                        <h6 class="card-subtitle mb-2">Intern</h6>
+                    </section>
                     <ul>
                         <li>ID: 3</li>
                         <li>Email: <a href="mailto: john@fakemail.com">john@fakemail.com</a></li>
