require lib to test folder

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </section>
                 <ul>
                     <li>ID: 1</li>
-                    <li>Email: <a href="mailto: jaredm@fakemail.com">jaredm@fakemail.com</a></li>
+                    <li>Email: <a href="mailto: jaredm@fakemail.com">jared@fakemail.com</a></li>
                     <li>Office Number: </li>
                 </ul>
             </div>
